j'aime les panda j'aime les panda j'aime les panda j'aime les panda j'aime les panda j'aime les panda j'aime les panda j'aime les panda j'aime les panda j'aime les panda j'aime les panda j'aime les panda j'aime les panda j'aime les panda j'aime les panda j'aime les panda j'aime les panda j'aime les panda j'aime les panda j'aime les panda j'aime les panda j'aime les panda j'aime les panda j'aime les panda j'aime les panda j'aime les panda j'aime les panda

--- a/panda.html
+++ b/panda.html
@@ -11,14 +11,8 @@
 	<button class="panda" data-type="normaux" data-tendance="haine">jm pas les panda normaux</button>
 	<button class="panda">What ?!</button>
 	<br>
-	<div id="tabs">
-		<ul>
-			<li id="pandaroux" class="output1 output">Les panda Roux</li>
-			<li id="pandanormal" class="output2 output">les panda</li>
-			<li id="j'aime" class="output3 output"> c'est mignon</li>
-			<li id="j'aimepas" class="output4 output"> j'aime pas</li>
-			<li id="what" class="output5 output">WHAT ?!</li>
-		</ul>
-	</div>
+	<div id="recever"></div>
+	<script type="text/javascript" src="node_modules/jquery/dist/jquery.min.js"></script>
+	<script type="text/javascript" src="panda.js"></script>
 </body>
 </html>
