--- a/panda.html
+++ b/panda.html
@@ -10,8 +10,8 @@
 	<button class="panda" data-type="roux" data-tendance="haine">jm pas les panda Roux</button>
 	<button class="panda" data-type="normaux" data-tendance="haine">jm pas les panda normaux</button>
 	<button class="panda">What ?!</button>
-	<br>
-	<div id="recever"></div>
+	<div></div>
+	
 	<script type="text/javascript" src="node_modules/jquery/dist/jquery.min.js"></script>
 	<script type="text/javascript" src="panda.js"></script>
 </body>
